# DataBases

./: lab1.docx
lab1/: LAB1.md  lab1.docx  lab1bd.drawio
lab2/: .gitignore  Cargo.toml  README.md
lab2/doc/: lab2.docx  ~$НІСТЕРСТВО ОСВІТИ І НАУКИ УКРАЇНИ.docx
lab2/src/: lib.rs  main.rs
lab2/src/controllers/: categories_controller.rs  departments_controller.rs  goods_controller.rs  mod.rs  orders_controller.rs
lab2/src/controllers/cli/: cli.rs  tasks.rs
lab2/src/models/: mod.rs
lab2/src/models/entities/: department.rs  mod.rs
lab2/src/models/traits/: create.rs  delete.rs  find_by_id.rs  lookup.rs  mod.rs  (+2 more)
lab2/src/views/: categories_view.rs  departments_view.rs  goods_view.rs  mod.rs  orders_view.rs
lab3/: Cargo.toml  README.md  diesel.toml
lab3/doc/: lab3.docx  ~$lab3.docx
lab3/indexes/: btree_1.sql  btree_2.sql  hash_1.sql  hash_2.sql
lab3/src/: lib.rs  main.rs
lab3/src/controllers/: categories_controller.rs  departments_controller.rs  goods_controller.rs  mod.rs  orders_controller.rs
lab3/src/controllers/cli/: cli.rs  mod.rs  tasks.rs
lab3/src/database/: mod.rs
lab3/src/models/: mod.rs  schema.rs
lab3/src/models/entities/: category.rs  department.rs  good.rs  order.rs
lab3/src/models/random/: random.rs
lab3/src/models/traits/: create.rs  delete.rs  find_by_id.rs  find_by_name.rs  lookup.rs  mod.rs  take_from_two.rs  update.rs
lab3/src/views/: categories_view.rs  goods_view.rs  mod.rs  orders_view.rs
lab3/triggers/: delete_tr1.sql  delete_tr2.sql  delete_tr3.sql  update.sql  update_tr1.sql  update_tr2.sql  update_tr3.sql
(+1 files in other folders)
