[package]
name = "lab3"
version = "0.1.0"
authors = ["dd26"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4.10"
anyhow = "1.0.25"